Add in Token Scoping and Refresh (#108)
Add in the full flow to go from username/password to a scoped token that
grants access to the OpenStack gubbins.
